--- a/argocd.yaml
+++ b/argocd.yaml
@@ -1,17 +1,17 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: catalog-argo-cd
+  name: store-argo-cd
   namespace: argocd
 spec:
   project: default
   source:
-    repoURL: https://github.com/wibowoharianja94-rgb/deployment.git
+    repoURL: https://github.com/cristianjohn980/deployment.git
     targetRevision: HEAD
     path: dev
   destination:
     server: https://kubernetes.default.svc
-    namespace: catalog-argo-cd
+    namespace: store-argo-cd
   
   syncPolicy:
     syncOptions:
